--- a/Comparison.html
+++ b/Comparison.html
@@ -4,7 +4,7 @@
    
     <meta charset="utf-8">
     <title>
-        Landing Page
+        Plot Comparison
     </title>
 
     <!-- Bootstrap CSS -->
@@ -40,48 +40,27 @@
         </div>
       </nav>
     <div class="container">
-        <div class="row">
-            <div class="col-md-8 col-sm-12" >
-              <div class="box">
-                <h1>
-                    Summary: Latitude vs. X
-                </h1>
-                <img src="Resources/assets/images/Fig1.png" align="left" width="200" height="200">
-                <p>
-                    The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. 
-                </p>
-                <p>
-                    After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitude. Factors we looked at include: temperature, cloudiness, wind speed and humidity. This site provides the source data for the visualizations created as part of the analysis, as well as explanations and descriptions of any trends and coorelations. Thanks for reading!  
-                </p>
-              </div>
-            </div>
-            <div class="col-md-4 col-sm-12">
-              <div class="box">
-                <h1>
-                    Visualizations
-                </h1>
-              </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <a href="Max_temp.html">
-                      <img src="Resources/assets/images/Fig1.png" width="200" height="200">
+                      <img src="Resources/assets/images/Fig1.png" width="500" height="500">
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <a href="Humidity.html">
-                      <img src="Resources/assets/images/Fig2.png" width="200" height="200">
+                      <img src="Resources/assets/images/Fig2.png" width="500" height="500">
                     </a>
                 </div>
               </div>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <a href="Cloudiness.html">
-                      <img src="Resources/assets/images/Fig3.png" width="200" height="200">
+                      <img src="Resources/assets/images/Fig3.png" width="500" height="500">
                     </a>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-12">
                     <a href="Wind_speed.html">
-                      <img src="Resources/assets/images/Fig4.png" width="200" height="200">
+                      <img src="Resources/assets/images/Fig4.png" width="500" height="500">
                     </a>
                 </div>
             </div>
