--- a/Wind_speed.html
+++ b/Wind_speed.html
@@ -4,7 +4,7 @@
    
     <meta charset="utf-8">
     <title>
-        Landing Page
+        Wind Speed vs. Latitude
     </title>
 
     <!-- Bootstrap CSS -->
@@ -44,14 +44,14 @@
             <div class="col-md-8 col-sm-12" >
               <div class="box">
                 <h1>
-                    Summary: Latitude vs. X
+                    Wind Speed
                 </h1>
-                <img src="Resources/assets/images/Fig1.png" align="left" width="200" height="200">
+                <img src="Resources/assets/images/Fig4.png" width="400" height="400">
                 <p>
-                    The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset of over 500 cities. 
+                    From our list of 500 cities, we query the OpenWeatherMap API for the wind speed along with the latitude. The responses are taken from JSON and appended onto list. Next we create a dataframe to hold these list and use MatPlotLib to generate a scatter plot of latitude vs. wind speed. 
                 </p>
                 <p>
-                    After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitude. Factors we looked at include: temperature, cloudiness, wind speed and humidity. This site provides the source data for the visualizations created as part of the analysis, as well as explanations and descriptions of any trends and coorelations. Thanks for reading!  
+                    Looking at the visualization, it appears that the closer we get to the north pole, the higher the wind speed becomes. 
                 </p>
               </div>
             </div>
